--- a/adoc/bp_postgresql_database_migration.adoc
+++ b/adoc/bp_postgresql_database_migration.adoc
@@ -67,7 +67,7 @@ The [path]``pg-migrate.sh`` script will automatically perform the following oper
 * Shut down the running database
 * Check if PostgreSQL 9.6 is installed and install it if not already present
 * Switch from PostgreSQL 9.4 to PostgreSQL 9.6 as the new default
-* Initiates the database migration
+* Initiate the database migration
 * Creates a PostgreSQL configuration file tuned for use by SUSE Manager (The reason for the latest version of smdba)
 * Start both the database and spacewalk services
 
