--- a/adoc/bp_postgresql_database_migration.adoc
+++ b/adoc/bp_postgresql_database_migration.adoc
@@ -68,7 +68,8 @@ The [path]``pg-migrate.sh`` script will automatically perform the following oper
 * Check if PostgreSQL 9.6 is installed and install it if not already present
 * Switch from PostgreSQL 9.4 to PostgreSQL 9.6 as the new default
 * Initiate the database migration
-* Creates a PostgreSQL configuration file tuned for use by SUSE Manager (The reason for the latest version of smdba)
+* Create a PostgreSQL configuration file tuned for use by SUSE Manager.
+This is why the latest version of smdba is required.
 * Start both the database and spacewalk services
 
 
