--- a/adoc/bp_postgresql_database_migration.adoc
+++ b/adoc/bp_postgresql_database_migration.adoc
@@ -29,126 +29,13 @@ psql (PostgreSQL) 10.9
 
 
 
-
 [[bp.postgresql.database.migrating.existing.installations]]
 == Migrating an Existing Installation
-
-=== Upgrade from PostgreSQL 9.4 to 9.6
-
-
-Before you migrate to PostgreSQL 9.6, ensure SUSE Manager is the latest version, and fully updated.
-You can check if the system is ready to use PostgreSQL 9.6 with this command:
-
-----
-suma-test-srv:~ # rpm -q smdba
-smdba-1.5.8-0.2.3.1.x86_64
-----
-
-[IMPORTANT]
-====
-PostgreSQL 9.6 requires smdba version 1.5.8 or higher
-====
-
-[WARNING]
-====
-Always create a database backup before performing a migration
-====
-
-The database migration begins by executing the following command:
-
-----
-$> /usr/lib/susemanager/bin/pg-migrate.sh
-----
-
-
-The [path]``pg-migrate.sh`` script will automatically perform the following operations:
-
-* Stop spacewalk services
-* Shut down the running database
-* Check if PostgreSQL 9.6 is installed and install it if not already present
-* Switch from PostgreSQL 9.4 to PostgreSQL 9.6 as the new default
-* Initiate the database migration
-* Create a PostgreSQL configuration file tuned for use by SUSE Manager.
-This is why the latest version of smdba is required.
-* Start both the database and spacewalk services
-
-
-[NOTE]
-====
-During the migration the data directory of the database is copied for use by the PostgreSQL 9.6.
-This results in temporarily doubling the amount of required disk space.
-In case of a failure, the migration script will attempt a restore to the original state.
-After a successful migration, you may safely delete the old database directory (renamed to /var/lib/pgsql/data-pg94) to reclaim lost disk space.
-====
-
-
-
-==== Performing a Fast Migration
-
-
-There are two negative aspects to performing a regular migration:
-
-* You temporarily need double the disk space under [path]``/var/lib/pgsql``
-* Depending on the size of the database the migration can take up some time because the whole data directory needs to be copied.
-
-
-It is possible however to perform a ``fast migration``.
-In this case you do not need the additional disk space as the database files will not be copied but hard linked.
-This also has the natural effect of greatly increasing the speed of the migration process The entire migration could be completed in less than one minute.
-
-[WARNING]
-====
-Keep in mind if a fast migration fails, database restoration will only be possible with a database backup.
-Only perform a fast migration if you have an availabel database backup.
-====
-
-
-Before you begin, ensure you have a database backup.
-Perform a fast migration with this command:
-
-----
-$> /usr/lib/susemanager/bin/pg-migrate.sh fast
-----
-
-
-
-=== PostgreSQL 9.6 to 10
-
-==== Prepare to Upgrade
-
-Before you begin the upgrade, prepare your existing 3.2 system and create a database backup.
-
-PostgreSQL stores data at [path]``/var/lib/pgsql/data/``, and logs to [path]``/var/lib/pgsql/data/pg_xlog/``.
-
-.Procedure: Preparing to Upgrade
-
-. Check the active PostgreSQL version:
-+
-----
-psql --version
-----
-+
-If you are using PostgreSQL{nbsp}9.6, you can upgrade to PostgreSQL{nbsp}10.
-
-. Check the active smdba version:
-+
-----
-rpm -q smdba
-----
-+
-PostgreSQL{nbsp}10 requires ``smdba`` version 1.6.2 or later.
-
-. Perform a database backup.
-// For more information on backing up, see xref:administration:backup-restore.adoc[].
-
-
-
-==== Upgrade PostgreSQL
 
 [WARNING]
 ====
 Always create a database backup before performing a migration.
-For more information about a database backup, see xref:db-migration.adoc#db-migration-prepare[].
+For more information about a database backup, see xref:bp_chap_suma_backup.adoc[].
 ====
 
 PostgreSQL upgrades can be performed in two ways: a regular upgrade, or a fast upgrade:
@@ -163,6 +50,96 @@ With the fast upgrade the risk to run out of disk space is smaller.
 
 In case of failure you do not have the implicit backup that you get when doing a regular upgrade.
 The regular upgrade will copy the database files instead of hardlinking them.
+
+PostgreSQL stores data at [path]``/var/lib/pgsql/data/``, and logs to [path]``/var/lib/pgsql/data/pg_xlog/``.
+
+
+
+=== Upgrade from PostgreSQL 9.4 to 9.6
+
+Before you migrate to PostgreSQL 9.6, ensure SUSE Manager is the latest version, and fully updated.
+You can check if the system is ready to use PostgreSQL 9.6 with:
+
+----
+psql --version
+----
+
+If you are using PostgreSQL{nbsp}9.4, you can upgrade to PostgreSQL{nbsp}9.6.
+
+
+[IMPORTANT]
+====
+PostgreSQL 9.6 requires smdba version 1.5.8 or higher.
+Check with:
+----
+rpm -q smdba
+----
+====
+
+
+.Procedure: Performing a Regular Upgrade
+. Perform a database backup.
+For more information on backing up, see xref:bp_chap_suma_backup.adoc[].
+. Begin the upgrade:
++
+----
+/usr/lib/susemanager/bin/pg-migrate.sh
+----
+. When the upgrade has successfully completed, you can safely delete the old database directory and reclaim lost disk space.
+The old directory is renamed to [path]``/var/lib/pgsql/data-pg94``.
+
+
+The [path]``pg-migrate.sh`` script performs these operations:
+
+* Stop spacewalk services
+* Shut down the running database
+* Check if PostgreSQL 9.6 is installed and install it if necessary
+* Switch from PostgreSQL 9.4 to PostgreSQL 9.6 as the new default
+* Initiate the database migration
+* Create a PostgreSQL configuration file tuned for use by {productname}
+* Start the database and spacewalk services
+
+
+[NOTE]
+====
+If the upgrade fails, the migration script will attempt to restore the database to its original state.
+====
+
+
+.Procedure: Performing a Fast PostgreSQL Upgrade
+. Perform a database backup.
+Without a verified database backup, you must not initiate a fast upgrade.
+For more information on backing up, see xref:bp_chap_suma_backup.adoc[].
+. Begin the upgrade:
++
+----
+/usr/lib/susemanager/bin/pg-migrate.sh fast
+----
+. When the upgrade has successfully completed, you can safely delete the old database directory and reclaim lost disk space.
+The old directory is renamed to [path]``/var/lib/pgsql/data-pg94``.
+
+
+
+=== Upgrade from PostgreSQL 9.6 to 10
+
+
+Before you migrate to PostgreSQL 9.10, ensure SUSE Manager is the latest version, and fully updated.
+You can check if the system is ready to use PostgreSQL 9.10 with:
+
+----
+psql --version
+----
+
+If you are using PostgreSQL{nbsp}9.6, you can upgrade to PostgreSQL{nbsp}10.
+
+[IMPORTANT]
+====
+PostgreSQL 9.10 requires smdba version 1.6.2 or higher.
+Check with:
+----
+rpm -q smdba
+----
+====
 
 .Procedure: Performing a Regular Upgrade
 . Perform a database backup.
