Revert "CLM: Add Use Cases"

--- a/modules/administration/pages/content-lifecycle.adoc
+++ b/modules/administration/pages/content-lifecycle.adoc
@@ -12,10 +12,6 @@ You can then assign these cloned channels to test systems to ensure they work as
 This is achieved through a series of environments that your software channels can move through on their lifecycle.
 Most environment lifecycles include at least test and production environments, but you can have as many environments as you require.
 
-This section covers the basic content lifecycle procedures, and the filters available.
-For more specific examples, see xref:administration:content-lifecycle-examples.adoc[].
-
-
 
 == Create a Content Lifecycle Project
 
@@ -38,10 +34,7 @@ The [guimenu]``Name`` field only accepts lowercase letters, numbers, periods (``
 . Continue creating environments until you have all the  environments for your lifecycle completed.
 You can select the order of the environments in the lifecycle by selecting an environment in the [guimenu]``Insert before`` field when you create it.
 
-
-
-== Filter Types
-
+== Advanced: Filter Types
 {productname} allows you to create various types of filters to control the content on project build.
 This is the list of supported filters:
 
@@ -55,12 +48,10 @@ This is the list of supported filters:
 ** by affected package
 ** by type
 
-
 [NOTE]
 ====
-Package dependencies are not resolved during content filtering.
+No package dependency solving is done on content filtering.
 ====
-
 
 There are multiple matchers you can use with the filter.
 Which ones are available will depend on the filter type you choose.
