fixed small typos

--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -2,14 +2,14 @@
 = Content Lifecycle Management Examples
 
 This section contains some common examples of how you can use content lifecycle management.
-Use these examples to build your own personalised implementation.
+Use these examples to build your own personalized implementation.
 
 
 
 [#create-proj-for-patch-cycle]
 == Creating a Project for a Monthly Patch Cycle
 
-
+A project for a monthly patch cycle consists of:
 
 * Creating a filter for a project
 * Adding a filter to a project
@@ -20,7 +20,7 @@ Use these examples to build your own personalised implementation.
 
 
 [#create-a-filter]
-=== Create a Filter for the Project
+=== Creating a Filter for the Project
 
 The ``By Date`` filter excludes all patches released after a specified date.
 This filter is useful for your CLM projects that follow a monthly patch cycle.
@@ -31,11 +31,12 @@ This filter is useful for your CLM projects that follow a monthly patch cycle.
 
 . In the [guimenu]``Filter Name`` field, type a name for your filter.
 For example, [systemitem]``Exclude patches by date``.
+
 . In the [guimenu]``Filter Type`` field, select [guimenu]``Patch (issued after)``.
 
 . Select the date and time.
-. Click btn:[Save].
 
+. Click btn:[Save].
 
 
 
@@ -82,7 +83,7 @@ Filters determine which metadata will be used to define your channels, as well t
 === Excluding a Patch from the Project
 
 Tests may help you discover issues.
-Once an issue is found, exclude the problem patch released before the **by date** filter.
+When an issue is found, exclude the problem patch released before the **by date** filter.
 
 .Procedure: Excluding a Patch
 
@@ -93,7 +94,8 @@ For example, [systemitem]``Exclude openjdk patch``.
 . In the [guimenu]``Filter Type`` field, select [guimenu]``Patch (matches Advisory Name)``.
 
 . In the [guimenu]``Advisory Name`` field, type a name for the advisory.
-For example, [systemitem]``SUSE-15-2019-1807``
+For example, [systemitem]``SUSE-15-2019-1807``.
+
 . Click btn:[Save].
 
 . Navigate to menu:Content Lifecycle[Projects] and select your project.
@@ -109,7 +111,7 @@ When you rebuild a previous environment with the btn:[Build] button, the new exc
 
 In this example, you have received a security alert.
 An important security patch was released several days after your last release on 1 August.
-The name of the new patch is ``SUSE-15-2019-2071``. 
+The name of the new patch is ``SUSE-15-2019-2071``.
 You need to include this new patch into your next patch cycle.
 
 [IMPORTANT]
@@ -154,7 +156,7 @@ Alternatively, create a new filter and change the assignment to the project.
 . Check if the exclude filter for ``SUSE-15-2019-1807`` can be detached from the project.
 There may be a new patch available to fix this issue.
 
-. Detach the ``include`` filter. 
+. Detach the ``include`` filter.
 The filter is included by default.
 
 . Complete updating your filters.
@@ -163,7 +165,7 @@ The filter is included by default.
 
 
 [#enhance-project-with-livepatching]
-== Enhance a Project with Livepatching
+== Enhance a Project with Live Patching
 
 This section covers setting up filters to create environments for live patching.
 
@@ -172,18 +174,18 @@ This section covers setting up filters to create environments for live patching.
 
 When you are preparing to use live patching, there are some important considerations
 
-* Only ever use one kernel version on your systems. 
+* Only ever use one kernel version on your systems.
 The live patching packages are installed with a specific kernel.
 
 * Live patching updates are shipped as one patch.
 
 * Each kernel patch that begins a new series of live patching kernels will display the ``required reboot`` flag.
-These kernel patches come with live patching tools. 
+These kernel patches come with live patching tools.
 When you have installed them, you will need to reboot the system at least once before the next year.
 
 * Only install live patch updates that match the installed kernel version.
 
-* Live patches are provided as stand-alone patches. 
+* Live patches are provided as stand-alone patches.
 You must exclude all regular kernel patches with higher kernel version than the currently installed one.
 ====
 
@@ -202,7 +204,7 @@ Procedure: Excluding Packages with a Higher Kernel Version
 . In the {productname} {webui}, navigate to menu:Content Lifecycle[Filters], and click btn:[Create Filter].
 
 . In the [guimenu]``Filter Name`` field, type a name for your filter.
-For example, [systemitem]``Exclude kernel greater than 4.12.14-150.17.1``
+For example, [systemitem]``Exclude kernel greater than 4.12.14-150.17.1``.
 
 . In the [guimenu]``Filter Type`` field, select [guimenu]``Patch contains package with version greater than``.
 
