for clarity (per feedback)

--- a/adoc/bp_postgresql_database_migration.adoc
+++ b/adoc/bp_postgresql_database_migration.adoc
@@ -42,9 +42,8 @@ PostgreSQL upgrades can be performed in two ways: a regular upgrade, or a fast u
 
 A regular upgrade will create a complete copy of the database, so you will need double the existing database size of space available.
 Regular upgrades can take a considerable amount of time, depending on the size of the database and the speed of the storage system.
-Regular upgrades also require database downtime, your database will not be accessible while the upgrade is running.
 
-A fast upgrade only takes a few minutes, and uses no additional disk space.
+A fast upgrade only takes a few minutes, and uses almost no additional disk space.
 However, if a fast upgrade fails, you must restore the database from the backup.
 With the fast upgrade the risk to run out of disk space is smaller.
 
