first commit for clm live patching

--- a/modules/administration/pages/live-patching-sles15.adoc
+++ b/modules/administration/pages/live-patching-sles15.adoc
@@ -1,6 +1,8 @@
 [[live-patching-sles15]]
 = Live Patching on {slsa}{nbsp}15
 
+// Include section linking to live patching with CLM
+
 On {slsa}{nbsp}15 systems and newer, live patching is managed by the [systemitem]``klp livepatch`` tool.
 
 Before you begin, ensure:
