replace atftpd with tftp (per feedback)

--- a/modules/client-configuration/pages/cobbler.adoc
+++ b/modules/client-configuration/pages/cobbler.adoc
@@ -158,13 +158,13 @@ Alternatively, you can use the [command]``net-edit`` subcommand, which will also
 
 == TFTP
 
-{productname} uses the [daemon]``atftpd`` daemon, but it can also use TFTP.
-The [daemon]``atftpd`` daemon is the recommended method for PXE services, and is installed by default.
+{productname} uses the [daemon]``tftp`` daemon.
+The [daemon]``tftp`` daemon is the recommended method for PXE services, and is installed by default.
 The default configuration works in most cases.
-However, if you need to change the configuration, do so using {yast} Services Manager.
+However, if you need to change the configuration, use the {yast} Services Manager.
 
 The TFTP service must be running so it can serve the [path]``pxelinux.0`` boot image.
-Start {yast} and use menu:System[Services Manager] to configure the [daemon]``tftpd`` daemon.
+Start {yast} and use menu:System[Services Manager] to configure the [daemon]``tftp`` daemon.
 
 You can also synchronize Cobbler-generated TFTP contents to a {productname} Proxy.
 
