--- a/modules/administration/pages/tuning-changelogs.adoc
+++ b/modules/administration/pages/tuning-changelogs.adoc
@@ -12,7 +12,8 @@ The parameter defaults to [systemitem]``0``, which means unlimited.
 java.max_changelog_entries = 0
 ----
 
-If you set this parameter, it will come into effect only for new packages when they are synchronized.
+If you set this parameter (remember you need to restart the services with `spacewalk-services restart), it will come into effect only for new packages when they are synchronized.
+
 You might like to delete the cached data to remove older data.
 
 [IMPORTANT]
@@ -25,13 +26,13 @@ The task is run in the background by Taskomatic, so you can continue to use {pro
 You can delete cached data from the command line, using the SQL interface:
 
 ----
-spacewalk-sql -i
-SQL> delete from rhnPackageRepodata;
-SQL> insert into rhnRepoRegenQueue (id, CHANNEL_LABEL, REASON, FORCE)
-(select sequence_nextval('rhn_repo_regen_queue_id_seq'),
+# spacewalk-sql -i
+yourdatabase=# DELETE FROM rhnPackageRepodata;
+yourdatabase=#  INSERT INTO rhnRepoRegenQueue (id, CHANNEL_LABEL, REASON, FORCE)
+(SELECT sequence_nextval('rhn_repo_regen_queue_id_seq'),
         C.label,
         'package summary modification',
         'Y'
-   from rhnChannel C);
-SQL> \q
+   FROM rhnChannel C);
+yourdatabase=#  \q
 ----
