add newly added filter types and matchers

--- a/modules/administration/pages/content-lifecycle.adoc
+++ b/modules/administration/pages/content-lifecycle.adoc
@@ -50,10 +50,11 @@ This is the list of supported filters:
 ** by name, epoch, version, release and architecture
 * patch filtering
 ** by advisory name
+** by advisory type
 ** by synopsis
+** by keyword
 ** by date
 ** by affected package
-** by type
 
 
 [NOTE]
@@ -73,6 +74,7 @@ The full list is:
 * greater or equal
 * lower or equal
 * lower
+* later or equal
 
 
 === Filter ``rule`` Parameter
