fix examples due to GUI changes

--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -32,7 +32,9 @@ This filter is useful for your CLM projects that follow a monthly patch cycle.
 . In the [guimenu]``Filter Name`` field, type a name for your filter.
 For example, [systemitem]``Exclude patches by date``.
 
-. In the [guimenu]``Filter Type`` field, select [guimenu]``Patch (issued after)``.
+. In the [guimenu]``Filter Type`` field, select [guimenu]``Patch (Issue date)``.
+
+. In the [guimenu]``Matcher`` field, [guimenu]``later or equal`` is autoselected.
 
 . Select the date and time.
 
@@ -91,7 +93,9 @@ When an issue is found, exclude the problem patch released before the **by date*
 
 . In the [guimenu]``Filter Name`` field, enter a name for the filter.
 For example, [systemitem]``Exclude openjdk patch``.
-. In the [guimenu]``Filter Type`` field, select [guimenu]``Patch (matches Advisory Name)``.
+. In the [guimenu]``Filter Type`` field, select [guimenu]``Patch (Advisory Name)``.
+
+. In the [guimenu]``Matcher`` field, select [guimenu]``equals``.
 
 . In the [guimenu]``Advisory Name`` field, type a name for the advisory.
 For example, [systemitem]``SUSE-15-2019-1807``.
@@ -110,9 +114,9 @@ When you rebuild a previous environment with the btn:[Build] button, the new exc
 === Including a Patch in the Project
 
 In this example, you have received a security alert.
-An important security patch was released several days after your last release on 1 August.
+An important security patch was released several days after the first of the month you are currently working on.
 The name of the new patch is ``SUSE-15-2019-2071``.
-You need to include this new patch into your next patch cycle.
+You need to include this new patch into your environment.
 
 [IMPORTANT]
 ====
@@ -128,7 +132,7 @@ For example, [systemitem]``Include kernel security fix``.
 
 . In the [guimenu]``Filter Type`` field, select [guimenu]``Patch (Advisory Name)``.
 
-. In the [guimenu]``Matcher`` field, select either [guimenu]``equals`` or [guimenu]``matches``.
+. In the [guimenu]``Matcher`` field, select [guimenu]``equals``.
 
 . In the [guimenu]``Advisory Name`` field, type [guimenu]``SUSE-15-2019-2071``, and check [guimenu]``Allow``.
 
@@ -160,7 +164,7 @@ There may be a new patch available to fix this issue.
 The filter is included by default.
 
 . Complete updating your filters.
-. Rebuild the project to create a new environment with patches for 1 September.
+. Rebuild the project to create a new environment with patches for the next month.
 
 
 
@@ -206,8 +210,9 @@ Procedure: Excluding Packages with a Higher Kernel Version
 . In the [guimenu]``Filter Name`` field, type a name for your filter.
 For example, [systemitem]``Exclude kernel greater than 4.12.14-150.17.1``.
 
-. In the [guimenu]``Filter Type`` field, select [guimenu]``Patch contains package with version greater than``.
+. In the [guimenu]``Filter Type`` field, select [guimenu]``Patch (Contains Package)``.
 
+. In the [guimenu]``Matcher`` field, select [guimenu]``version greater than``.
 
 . In the [guimenu]``Package Name`` field, type [systemitem]``kernel-default``.
 . Leave the the [guimenu]``Epoch`` field empty.
