fix starting cobbler service (per feedback)

--- a/modules/client-configuration/pages/cobbler.adoc
+++ b/modules/client-configuration/pages/cobbler.adoc
@@ -212,21 +212,22 @@ If you reinstall an already configured proxy and want to push all the files agai
 The {productname} Server must be able to access the {productname} Proxy systems directly.
 You cannot push using a proxy.
 
-Before you start the Cobbler service, check that all the prerequisites are configured according to your requirements.
-You can do this by running the [command]``cobbler check`` command.
-
-When your configuration is correct, start the {productname} service:
-
-----
-/usr/sbin/spacewalk-service start
-----
-
 [WARNING]
 ====
 Do not start or stop the [command]``cobblerd`` service independent of the {productname} service.
 Doing so can cause errors.
 Always use [command]``/usr/sbin/spacewalk-service`` to start or stop {productname}.
 ====
+
+Check that all the prerequisites the Cobbler service requires, are configured according to your requirements.
+You can do this by running the [command]``cobbler check`` command.
+
+// Does this work and makes sense?
+When you had to change the configuration, restart the {productname} service:
+
+----
+/usr/sbin/spacewalk-service restart
+----
 
 
 ////
@@ -410,7 +411,8 @@ echo "Hello, world"
 ----
 
 For more information about Kickstart templates and Cobbler, see
-https://fedorahosted.org/cobbler/wiki/KickstartTemplating
+https://cobbler.github.io/manuals/2.8.0/3/5_-_Kickstart_Templating.html.
+
 
 
 
