--- a/modules/administration/pages/tuning-changelogs.adoc
+++ b/modules/administration/pages/tuning-changelogs.adoc
@@ -14,16 +14,16 @@ java.max_changelog_entries = 0
 
 If you set this parameter (remember you need to restart the services with `spacewalk-service restart`), it will come into effect only for new packages when they are synchronized.
 
-You might like to delete the cached data to remove older data.
+You might like to delete and regenerate the cached data to remove older data.
 
 [IMPORTANT]
 ====
-Deleting cached data can take a long time.
+Deleting and regenerating cached data can take a long time.
 Depending on the number of channels you have and the amount of data to be deleted, it can potentially take several hours.
 The task is run in the background by Taskomatic, so you can continue to use {productname} while the operation completes, however you should expect some performance loss.
 ====
 
-You can delete cached data from the command line, using the SQL interface:
+You can delete and and request a regeneration of cached data from the command line, using the SQL interface:
 
 ----
 # spacewalk-sql -i
