Better message for the records at rhnRepoRegenQueue table

--- a/modules/administration/pages/tuning-changelogs.adoc
+++ b/modules/administration/pages/tuning-changelogs.adoc
@@ -31,7 +31,7 @@ yourdatabase=# DELETE FROM rhnPackageRepodata;
 yourdatabase=# INSERT INTO rhnRepoRegenQueue (id, CHANNEL_LABEL, REASON, FORCE)
                (SELECT sequence_nextval('rhn_repo_regen_queue_id_seq'),
                        C.label,
-                       'package summary modification',
+                       'cached data regeneration',
                        'Y'
                 FROM rhnChannel C);
 yourdatabase=#  \q
