--- a/modules/administration/pages/channel-management.adoc
+++ b/modules/administration/pages/channel-management.adoc
@@ -8,7 +8,7 @@ When a client has been assigned to a base channel, it is only possible for that 
 Organizing channels in this way ensures that only compatible packages are installed on each system.
 
 Software channels use repositories to provide packages.
-The channels mirror the repositories in {productname}, and the packages and other data is stored in the {productname} database.
+The channels mirror the repositories in {productname}, and the package names and other data are stored in the {productname} database.
 You can have any number of repositories associated with a channel.
 The software from those repositories is then able to be installed on clients by subscribing the client to the appropriate channel.
 
