--- a/modules/administration/pages/channel-management.adoc
+++ b/modules/administration/pages/channel-management.adoc
@@ -10,7 +10,7 @@ Organizing channels in this way ensures that only compatible packages are instal
 Software channels use repositories to provide packages.
 The channels mirror the repositories in {productname}, and the package names and other data are stored in the {productname} database.
 You can have any number of repositories associated with a channel.
-The software from those repositories is then able to be installed on clients by subscribing the client to the appropriate channel.
+The software from those repositories can then be installed on clients by subscribing the client to the appropriate channel.
 
 Clients can only be assigned to one base channel.
 The client is then able to install or update packages from the repositories associated with that base channel and any of its child channels.
