--- a/modules/administration/pages/channel-management.adoc
+++ b/modules/administration/pages/channel-management.adoc
@@ -13,7 +13,7 @@ You can have any number of repositories associated with a channel.
 The software from those repositories can then be installed on clients by subscribing the client to the appropriate channel.
 
 Clients can only be assigned to one base channel.
-The client is then able to install or update packages from the repositories associated with that base channel and any of its child channels.
+The client can then install or update packages from the repositories associated with that base channel and any of its child channels.
 
 {productname} provides a number of vendor channels, which provide you everything you need to run {productname}.
 {productname} Administrators and Channel Administrators have channel management authority, which gives them the ability to create and manage their own custom channels.
