--- a/modules/administration/pages/custom-channels.adoc
+++ b/modules/administration/pages/custom-channels.adoc
@@ -18,7 +18,7 @@ You will need to create the channel in the {productname} {webui} and create a re
 You can select a vendor channel as the base channel if you want to use packages provided by a vendor.
 Alternatively, select ``none`` to make your custom channel a base channel.
 
-If you include a package with [systemitem]``-release`` at the end of the package name in your channel, it will be automatically installed when the channel is installed.
+If you include a package with [systemitem]``-release`` at the end of the package name in your channel, it will be automatically installed when the channel is assigned.
 
 [IMPORTANT]
 ====
