--- a/modules/administration/pages/custom-channels.adoc
+++ b/modules/administration/pages/custom-channels.adoc
@@ -36,7 +36,7 @@ Labels must not contain space characters or capital letters.
 Ensure that you choose the compatible parent channel for your packages.
 . In the [guimenu]``Architecture`` drop down, choose the appropriate hardware architecture (for example, [systemitem]``x86_64``).
 . Provide any additional information in the contact details, channel access control, and GPG fields, as required for your environment.
-. Click btn:[Create Channel]
+. Click btn:[Create Channel].
 
 .Procedure: Create a software repository
 
