--- a/modules/administration/pages/custom-channels.adoc
+++ b/modules/administration/pages/custom-channels.adoc
@@ -42,7 +42,7 @@ Ensure that you choose the compatible parent channel for your packages.
 
 . In the {productname} {webui}, navigate to menu:Software[Manage > Repositories], and click btn:[Create Repository].
 . On the [guimenu]``Create Repository`` page, give your repository a label (for example, [systemitem]``my-tools-sles15sp1-x86_64-repo``).
-. In the [guimenu]``Repository URL`` field, provide the path to the folder that contains the [path]``repodata`` file (for example, [systemitem]``file:///opt/mytools/``).
+. In the [guimenu]``Repository URL`` field, provide the path to the directory with the [path]``repodata`` file (for example, [systemitem]``file:///opt/mytools/``).
 You can use any valid addressing protocol in this field.
 . Uncheck the [guimenu]``Has Signed Metadata?`` check box.
 . Provide any additional information in the SSL fields, as required for your environment.
