--- a/modules/administration/pages/custom-channels.adoc
+++ b/modules/administration/pages/custom-channels.adoc
@@ -46,7 +46,7 @@ Ensure that you choose the compatible parent channel for your packages.
 You can use any valid addressing protocol in this field.
 . Uncheck the [guimenu]``Has Signed Metadata?`` check box.
 . Provide any additional information in the SSL fields, as required for your environment.
-. Click btn:[Create Repository]
+. Click btn:[Create Repository].
 . Synchronize your new repository with your custom channel by navigating to menu:Software[Manage > Channels], clicking on the name of your newly created custom channel, and navigating to the [guimenu]``Repositories`` tab.
 . Ensure the repository you want to synchronize is checked, and click btn:[Update Repositories].
 . Navigate to the [guimenu]``Sync`` tab and click btn:[Sync Now] to synchronize immediately.
