--- a/modules/administration/pages/custom-channels.adoc
+++ b/modules/administration/pages/custom-channels.adoc
@@ -63,7 +63,7 @@ You can select multiple channels, if you need to.
 
 == Deleting Custom Channels
 
-You cannot delete {productname} channels.
+You cannot delete {productname} channels with the {webui}.
 Only custom channels can be deleted.
 
 . In the {productname} {webui}, navigate to menu:Software[Manage > Channels], and select the channel you want to delete.
