--- a/modules/administration/pages/tuning-clientdiscovery.adoc
+++ b/modules/administration/pages/tuning-clientdiscovery.adoc
@@ -9,15 +9,15 @@ However, it is possible to configure {productname} to discover clients according
 == PXE Boot Discovery
 
 You can use Cobbler to discover any client that boots using PXE.
-When a client PXE boots, Cobbler would serve them an operating system image.
-The client would then be recorded in the database with an inventory of their hardware, until they are ready to be installed.
+When a client PXE boots, Cobbler serves them an operating system image.
+The client is then recorded in the database with an inventory of their hardware, until they are ready to be installed.
 
 
 
 === Network Range Discovery
 
 You can use the Salt scanning roster function, and the ``salt-ssh`` command to find all clients that connect from within a given IP range.
-This will identify all clients within the IP range that have an open SSH port, and can be accessed with known SSH credentials.
+This identifies all clients within the IP range that have an open SSH port, and can be accessed with known SSH credentials.
 
 For more information about the Salt scanning roster feature, see link:https://docs.saltstack.com/en/latest/ref/roster/all/salt.roster.scan.html[].
 
@@ -26,5 +26,5 @@ For more information about the Salt scanning roster feature, see link:https://do
 == Virtual Host Discovery
 
 In virtualized environments that use a virtual host manager, the VHM can be configured to discover running virtual machines.
-Discovered clients are than matched to existing system profiles.
-This method can also be used to detect sclients that have not been onboarded.
+Discovered clients are matched to existing system profiles.
+This method can also be used to detect clients that have not been onboarded.
