--- a/adoc/bp_postgresql_database_migration.adoc
+++ b/adoc/bp_postgresql_database_migration.adoc
@@ -45,7 +45,7 @@ Regular upgrades can take a considerable amount of time, depending on the size o
 
 A fast upgrade only takes a few minutes, and uses almost no additional disk space.
 However, if a fast upgrade fails, you must restore the database from the backup.
-With the fast upgrade the risk to run out of disk space is smaller.
+A fast upgrade reduces the risk of running out of disk space.
 
 In case of failure you do not have the implicit backup that you get when doing a regular upgrade.
 The regular upgrade will copy the database files instead of hardlinking them.
