--- a/adoc/bp_postgresql_database_migration.adoc
+++ b/adoc/bp_postgresql_database_migration.adoc
@@ -94,7 +94,7 @@ The [path]``pg-migrate.sh`` script performs these operations:
 * Shut down the running database
 * Check if PostgreSQL 9.6 is installed and install it if necessary
 * Switch from PostgreSQL 9.4 to PostgreSQL 9.6 as the new default
-* Initiate the database migration
+* Start the database migration
 * Create a PostgreSQL configuration file tuned for use by {productname}
 * Start the database and spacewalk services
 
