--- a/adoc/bp_postgresql_database_migration.adoc
+++ b/adoc/bp_postgresql_database_migration.adoc
@@ -79,7 +79,7 @@ rpm -q smdba
 .Procedure: Performing a Regular Upgrade
 . Perform a database backup.
 For more information on backing up, see xref:bp_chap_suma_backup.adoc[].
-. Begin the upgrade:
+. Start the upgrade:
 +
 ----
 /usr/lib/susemanager/bin/pg-migrate.sh
