--- a/adoc/bp_postgresql_database_migration.adoc
+++ b/adoc/bp_postgresql_database_migration.adoc
@@ -143,7 +143,7 @@ rpm -q smdba
 .Procedure: Performing a Regular Upgrade
 . Perform a database backup.
 // For more information on backing up, see xref:administration:backup-restore.adoc[].
-. Begin the upgrade:
+. Start the upgrade:
 +
 ----
 /usr/lib/susemanager/bin/pg-migrate-96-to-10.sh
